--- a/AIR/assets/01_ImageTracking_1_ImageOnTarget/css/default.css
+++ b/AIR/assets/01_ImageTracking_1_ImageOnTarget/css/default.css
@@ -12,3 +12,14 @@
 	display: table;
 }
 
+.close {
+	position: fixed;
+	top: 10px;
+	right: 10px;
+	z-index: 9999;
+}
+
+.close img {
+	width: 32px;
+	height: auto;
+}
